# Ollama_Downloads

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml
src/ollama_downloads/: ollama_downloads_process.py
tests/: _1_test.py  test_1.py
